--- a/app/views/trades/show.html.haml
+++ b/app/views/trades/show.html.haml
@@ -6,43 +6,40 @@
       %th.details-information
         お客様名
       %td.details-form
-        ヴァレ有生
+        = @trade.buyer
       %th.details-information
         商品名
       %td.details-form
-        ケアネスSP 500ml
-        ケアネスTR 400ml
-        ホリスティックドライヤー
-        オーディーパブリック 2470 3つ
+        = @trade.product
     %tr
       %th.details-information
         価格(税込)
       %td.details-form
-        ¥4180
+        = @trade.price
       %th.details-information
         連絡
       %td.details-form
-        3/5 連絡済
+        = @trade.contact_data
     %tr
       %th.details-information
         担当者
       %td.details-form
-        川松
+        = @trade.staff
       %th.details-information
         電話番号
       %td.details-form
-        090-6973-0008
+        = @trade.tel
     %tr
       %th.details-information
         支払い日
       %td.details-form
-        代未
+        = @trade.payment_date
       %th.details-information
         メモ
       %td.details-form
-        特になし
+        = @trade.memo
 
   .btn-list
-    = button_to "戻る", 'trades/index', method: :get, class: "button-container"
-    = button_to "編集", 'trades/index', method: :get, class: "button-container"
-    = button_to "削除", 'trades/index', method: :get, class: "button-container", id: "delete"
+    = link_to "一覧", root_path, method: :get, class: "button-container"
+    = link_to "編集", edit_trade_path(@trade), method: :get, class: "button-container"
+    = link_to "削除", trade_path(@trade), method: :delete, class: "button-container", id: "delete"
