--- a/app/views/trades/show.html.haml
+++ b/app/views/trades/show.html.haml
@@ -42,4 +42,4 @@
   .btn-list
     = link_to "一覧", root_path, method: :get, class: "button-container"
     = link_to "編集", edit_trade_path(@trade), method: :get, class: "button-container"
-    = link_to "削除", trade_path(@trade), method: :delete, class: "button-container", id: "delete"
+    = link_to "削除", trade_path(@trade), method: :delete, data: { confirm: '削除しますか？' }, class: "button-container", id: "delete"
